Add matrix to rv question 2

--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -375,7 +375,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Question 1"
+    "## Question 1"
    ],
    "metadata": {
     "collapsed": false,
@@ -470,7 +470,57 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "## Question 2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "* Red marks if the sum of the two dice is less than 12\n",
+    "* Blue marks if the sum of the dice is equal to 12\n",
+    "* Green marks if the sum of the dice is greater than 12\n",
+    "\n",
+    "The first number represents a red marker from the first bag.\n",
+    "\n",
+    "The second number represents a green marker from the second bag."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\\begin{array}{ccccc}\n",
+    "\\left\\langle \\color{red}{1,6} \\right\\rangle  & \\left\\langle \\color{red}{2,6} \\right\\rangle  & \\left\\langle \\color{red}{3,6} \\right\\rangle  & \\left\\langle \\color{red}{4,6} \\right\\rangle  & \\left\\langle\\color{red}{5,6}\\right\\rangle \\\\\n",
+    "\\left\\langle \\color{red}{1,7} \\right\\rangle  & \\left\\langle \\color{red}{2,7} \\right\\rangle  & \\left\\langle \\color{red}{3,7} \\right\\rangle  & \\left\\langle \\color{red}{4,7} \\right\\rangle  & \\left\\langle \\color{blue}{5,7} \\right\\rangle \\\\\n",
+    "\\left\\langle \\color{red}{1,8} \\right\\rangle  & \\left\\langle \\color{red}{2,8} \\right\\rangle  & \\left\\langle \\color{red}{3,8} \\right\\rangle  & \\left\\langle \\color{blue}{4,8} \\right\\rangle  & \\left\\langle \\color{green}{5,8} \\right\\rangle \\\\\n",
+    "\\left\\langle\\color{red}{1,9}  \\right\\rangle  & \\left\\langle \\color{red}{2,9} \\right\\rangle  & \\left\\langle \\color{blue}{3,9} \\right\\rangle  & \\left\\langle \\color{green}{4,9} \\right\\rangle  & \\left\\langle \\color{green}{5,9} \\right\\rangle \\\\\n",
+    "\\left\\langle\\color{red}{1,10} \\right\\rangle  & \\left\\langle \\color{blue}{2,10} \\right\\rangle  & \\left\\langle \\color{green}{3,10} \\right\\rangle  & \\left\\langle \\color{green}{4,10} \\right\\rangle  & \\left\\langle \\color{green}{5,10} \\right\\rangle\n",
+    "\\end{array}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
