Add answer to rv question 2

--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -375,6 +375,24 @@
   {
    "cell_type": "markdown",
    "source": [
+    "#### Binomial Distribution:\n",
+    "\n",
+    "$n$ is the number of trials\n",
+    "\n",
+    "$p$ is the success probability for each trial\n",
+    "\n",
+    "**Mean:** $n\\cdot p$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Question 1"
    ],
    "metadata": {
@@ -507,7 +525,9 @@
     "\\left\\langle \\color{red}{1,8} \\right\\rangle  & \\left\\langle \\color{red}{2,8} \\right\\rangle  & \\left\\langle \\color{red}{3,8} \\right\\rangle  & \\left\\langle \\color{blue}{4,8} \\right\\rangle  & \\left\\langle \\color{green}{5,8} \\right\\rangle \\\\\n",
     "\\left\\langle\\color{red}{1,9}  \\right\\rangle  & \\left\\langle \\color{red}{2,9} \\right\\rangle  & \\left\\langle \\color{blue}{3,9} \\right\\rangle  & \\left\\langle \\color{green}{4,9} \\right\\rangle  & \\left\\langle \\color{green}{5,9} \\right\\rangle \\\\\n",
     "\\left\\langle\\color{red}{1,10} \\right\\rangle  & \\left\\langle \\color{blue}{2,10} \\right\\rangle  & \\left\\langle \\color{green}{3,10} \\right\\rangle  & \\left\\langle \\color{green}{4,10} \\right\\rangle  & \\left\\langle \\color{green}{5,10} \\right\\rangle\n",
-    "\\end{array}"
+    "\\end{array}\n",
+    "\n",
+    "Total number of possible outcomes: $25$"
    ],
    "metadata": {
     "collapsed": false,
@@ -519,8 +539,58 @@
   {
    "cell_type": "markdown",
    "source": [
-    "\n"
+    "Probability that the sum is less than 12:\n",
+    "$\\frac{15}{25}=\\frac{3}{5}$"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Probability that the sum is equal to 12:\n",
+    "$\\frac{4}{25}$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Probability that the sum is greater than 12:\n",
+    "$\\frac{6}{25}$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Expected value of playing the game:\n",
+    "$E(X)=5\\cdot\\frac{6}{25}+0\\cdot\\frac{4}{25}+(-6)\\cdot\\frac{3}{5}=-2.4$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
