--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -17,7 +17,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## **Probability and Bayes Theorem**"
+    "> ## **Probability and Bayes Theorem**"
    ],
    "metadata": {
     "collapsed": false,
@@ -348,7 +348,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## **Random Variables**"
+    "> ## **Random Variables**"
    ],
    "metadata": {
     "collapsed": false,
@@ -381,7 +381,11 @@
     "\n",
     "$p$ is the success probability for each trial\n",
     "\n",
-    "**Mean:** $n\\cdot p$"
+    "$q=1-p$\n",
+    "\n",
+    "**Mean:** $n\\cdot p$\n",
+    "\n",
+    "**Variance:** $n\\cdot p \\cdot q = n\\cdot p \\cdot (1-p)$"
    ],
    "metadata": {
     "collapsed": false,
@@ -580,6 +584,72 @@
    "source": [
     "Expected value of playing the game:\n",
     "$E(X)=5\\cdot\\frac{6}{25}+0\\cdot\\frac{4}{25}+(-6)\\cdot\\frac{3}{5}=-2.4$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Question 3"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Using the binomial distribution mean:\n",
+    "\n",
+    "The number of people selected: $n=8$\n",
+    "\n",
+    "The probability the employee is a male: $p=0.4$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The mean is: $n\\cdot p = 8 \\cdot 0.4 = 3.2$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The variance is: $n\\cdot p \\cdot (1-p) = 8\\cdot 0.4\\cdot 0.6= 1.92$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The standard deviation is the square root of the variance.\n",
+    "\n",
+    "The standard deviation is: $\\sqrt{1.92}=\\frac{4\\cdot\\sqrt{3}}{5}\\approx1.385$"
    ],
    "metadata": {
     "collapsed": false,
