Edit answer to rv question 3

--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -607,7 +607,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Using the binomial distribution mean:\n",
+    "According to the binomial distribution:\n",
     "\n",
     "The number of people selected: $n=8$\n",
     "\n",
