Add answer to rv question 4

--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -660,6 +660,51 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## Question 4"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "According to the **$68-95-99.7$ Rule** in normal distribution:\n",
+    "* $68\\%$ of the population is within $1\\sigma$ of the mean.\n",
+    "* $95\\%$ of the population is within $2\\sigma$ of the mean.\n",
+    "* $99.7\\%$ of the population is within $3\\sigma$ of the mean.\n",
+    "\n",
+    "All normal distributions are symmetric, therefore we can take the positive standard deviation."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The mean: $\\$26,000$\n",
+    "\n",
+    "The standard deviation: $\\$2,000$\n",
+    "\n",
+    "X in $P(26<X<30)$ falls between $2\\sigma=\\$4,000$ of the mean."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
    "metadata": {
     "collapsed": false,
