Add answer to rv question 5

--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -705,6 +705,49 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## Question 5"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The probability density function (PDF), or density of a continuous random variable is\n",
+    "the value in the sample space.\n",
+    "\n",
+    "Therefore, we can simply calculate the area of the triangle when $P(X>3)$."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The height is: $0.4$\n",
+    "\n",
+    "The width is: $2$\n",
+    "\n",
+    "So we get: $\\frac{0.4\\cdot2}{2}=0.4$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
    "metadata": {
     "collapsed": false,
