Add answer to rv question 6

--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -383,6 +383,10 @@
     "\n",
     "$q=1-p$\n",
     "\n",
+    "**Binomial Distribution:** $\\binom{n}{k}\\cdot p^{k}\\cdot q^{n-k}$\n",
+    "\n",
+    "Binomial coefficiet: $\\binom{n}{k}=\\frac{n!}{k!\\cdot(n-k)!}$\n",
+    "\n",
     "**Mean:** $n\\cdot p$\n",
     "\n",
     "**Variance:** $n\\cdot p \\cdot q = n\\cdot p \\cdot (1-p)$"
@@ -738,6 +742,50 @@
     "The width is: $2$\n",
     "\n",
     "So we get: $\\frac{0.4\\cdot2}{2}=0.4$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Question 6:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Using the binomial distribution:\n",
+    "\n",
+    "The number of employees: $n=4$\n",
+    "\n",
+    "The number of employees with children: $k=3$\n",
+    "\n",
+    "The probability the employee had children: $0.6$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The binomial coeeficient is: $\\binom{4}{3}=\\frac{4!}{3!\\cdot(4-3)!}=\\frac{4\\cdot3\\cdot2\\cdot1}{3\\cdot2\\cdot1}=4$\n",
+    "\n",
+    "The binomial distribution is: $4\\cdot0.6^{3}\\cdot(1-0.6)^{1}=\\frac{216}{625}$"
    ],
    "metadata": {
     "collapsed": false,
