Add answer to rv question 7

--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -796,6 +796,32 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## Question 7"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "According to the values in the graph, the expected value of $X$ is:\n",
+    "\n",
+    "$E(X)=(-10)\\cdot0.1+(-5)\\cdot0.35+0\\cdot0.1+5\\cdot0.35+10\\cdot0.1=0$"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
    "metadata": {
     "collapsed": false,
