Edit heading for rv question 6

--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -753,7 +753,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Question 6:"
+    "## Question 6"
    ],
    "metadata": {
     "collapsed": false,
