Edit binomial distribution markdown

--- a/1SA Final Project pt.1.ipynb
+++ b/1SA Final Project pt.1.ipynb
@@ -379,11 +379,11 @@
     "\n",
     "$n$ is the number of trials\n",
     "\n",
-    "$p$ is the success probability for each trial\n",
+    "$p$ is the probability of success on a single trial\n",
     "\n",
-    "$q=1-p$\n",
+    "$q=1-p$ is the probability of failure on a single trial\n",
     "\n",
-    "**Binomial Distribution:** $\\binom{n}{k}\\cdot p^{k}\\cdot q^{n-k}$\n",
+    "**Binomial Distribution  Formula:** $\\binom{n}{k}\\cdot p^{k}\\cdot q^{n-k}$\n",
     "\n",
     "Binomial coefficiet: $\\binom{n}{k}=\\frac{n!}{k!\\cdot(n-k)!}$\n",
     "\n",
