--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -17,6 +17,10 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import OrdinalEncoder\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "# display setup\n",
     "pd.set_option(\"display.max_columns\", None) # the None parameter displays unlimited columns\n",
@@ -862,20 +866,55 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> ### Observations:\n",
-    "> * All Levels is the most common level, representing over 50%.\n",
-    "> * Web Development is the most common subject, and Business Finance is second with\n",
-    "> approximately 1% difference respectively.\n",
-    "> * Price variations according to the level of the course also show that Expert is\n",
-    "> the least common level in the data. It is also the only level that does not\n",
-    "> provide free courses. The other levels are dispersed more frequently\n",
-    "> throughout the line.\n",
-    "> * Web Development courses are significantly higher in subscribers than the other subjects.\n",
-    "> Since Business Finance falls shortly behind in content, it is likely that people are more\n",
-    "> interested in studying Web Development courses."
+    "> ### Analyzing Additional Columns"
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# examine current shape\n",
+    "df2.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# every course has a unique URL\n",
+    "df2[\"url\"].nunique()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# some courses have an identical title\n",
+    "df2[\"course_title\"].nunique()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
