Use groupby for duplicated course titles

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -921,6 +921,55 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "# find duplicated instances\n",
+    "# false marks all duplicates as true\n",
+    "title_df = df2[df2.duplicated(\"course_title\", keep=False)].copy()\n",
+    "# show duplicated titles\n",
+    "title_df[\"course_title\"].unique()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# groupy course title\n",
+    "title = title_df.groupby(\"course_title\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# examining one of the duplicated courses\n",
+    "# the courses have the same name and different values for some features\n",
+    "title.get_group(\"Acoustic Blues Guitar Lessons\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
