Add additional columns observations markdown

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -986,6 +986,19 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Observations:\n",
+    "> * The duplicated have different parameters such as is_paid or published_timestamp.\n",
+    "> Maybe the course provides the first free lessons free or added new content.\n",
+    "> * These instances can be kept as they are likely to have various values (i.e. each\n",
+    "> URL is unique)."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
