Remove duplicated instances

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -1040,6 +1040,37 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "# remove duplicated instances\n",
+    "\n",
+    "df3.drop_duplicates(\"course_id\", inplace=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# evaluate changes\n",
+    "df3.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
