Add removing columns markdown

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -1071,6 +1071,45 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "# separate predictors from target values\n",
+    "\n",
+    "# drop creates a copy without changing the training set\n",
+    "X_train = df3.drop(\"num_subscribers\", axis=1)\n",
+    "\n",
+    "# create a deep copy of the target values\n",
+    "y_train = df3[\"num_subscribers\"].copy()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Removing the Following Columns:\n",
+    "> The reason for removing these columns is for the model to generalize better.\n",
+    "> Furthermore, these columns have a unique value for each instance (i.e. URL, course ID) which\n",
+    "> does not provide information the model can learn from to predict on new data.\n",
+    ">> * course_id\n",
+    ">> * course_title\n",
+    ">> * url\n",
+    ">> * published_timestamp"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
