Add numerical features pipeline

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -1110,6 +1110,26 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "# list of numerical features\n",
+    "num_features = [\"price\", \"num_reviews\", \"num_lectures\", \"content_duration\"]\n",
+    "\n",
+    "# MinMaxScaler normalizes data (rescale between 0-1)\n",
+    "num_pipeline = Pipeline([\n",
+    "    (\"min_max\", MinMaxScaler())\n",
+    "])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
