Add level feature pipeline

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -1130,6 +1130,26 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "# list of level feature categories\n",
+    "levels = [\"All Levels\", \"Beginner Level\", \"Intermediate Level\", \"Expert Level\"]\n",
+    "\n",
+    "# OrdinalEncoder converts categories to integers according to order specified in list\n",
+    "level_pipeline = Pipeline([\n",
+    "    (\"level\", OrdinalEncoder(categories=[levels], dtype=int))\n",
+    "])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
