Add is paid feature pipeline

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -1150,11 +1150,29 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# OrdinalEncoder converts True and False values to integers\n",
+    "# True=1, False=0\n",
+    "is_paid_pipeline = Pipeline([\n",
+    "    (\"is_paid\", OrdinalEncoder(dtype=int))\n",
+    "])"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%"
     }
    }
   }
