Add subject feature pipeline

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -1168,11 +1168,28 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "# OneHotEncoder converts categories to a binary dummy array\n",
+    "subject_pipeline = Pipeline([\n",
+    "    (\"subject\", OneHotEncoder(handle_unknown=\"ignore\"))\n",
+    "])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%"
+     "name": "#%%\n"
     }
    }
   }
