Instantiate KNN model with distance weights

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2217,6 +2217,24 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "# instantiate KNN model using distance instead of uniform\n",
+    "# distance means closer instances have a larger weight\n",
+    "# uniform weighs all instances equally\n",
+    "# default k=5\n",
+    "knn = KNeighborsClassifier(weights=\"distance\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
