Show evaluation metrics on predictions

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2277,6 +2277,49 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "knn_pred_2 = knn.predict(X_train_prepared)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9895289508225843\n",
+      "Confusion Matrix:\n",
+      " [[63548   372]\n",
+      " [  689 36718]]\n",
+      "Precision: 0.9899703424103532\n",
+      "Recall: 0.9815809875157057\n",
+      "F1 Score: 0.98575781575097\n",
+      "ROC AUC Score: 0.9878806063986538\n"
+     ]
+    }
+   ],
+   "source": [
+    "display_evaluation(y_train, knn_pred_2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
