Add random forest classification model markdown

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2317,6 +2317,47 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> So far, the performance of the KNN model using distance weights instead of uniform\n",
+    "> drastically improved the results.\n",
+    ">\n",
+    "> We will test on another model and look for the best hyperparameters for most promising\n",
+    "> model."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> ### What is the Random Forest Classification Model?\n",
+    "\n",
+    "Forests are based on multiple decision trees, so it is vital to first understand how decision\n",
+    "trees work.\n",
+    "\n",
+    "A decision tree is a non-linear model built by constructing many linear boundaries.\n",
+    "The tree works as a sequence of yes or no, true or false questions that progress down\n",
+    "the tree until reaching a predicted class. The data is split into nodes based on\n",
+    "feature values. This model is good for occasions when there is no single linear line that\n",
+    "can divide the data. Gini Impurity of a node represents the probability that a randomly chosen\n",
+    "sample would be incorrectly classified, so the goal is to reduce this as much as possible.\n",
+    "\n",
+    "Using a single decision tree could cause overfitting of the training data. For example,\n",
+    "a decision tree could create a leaf node (the predicted class) for each instance.\n",
+    "Using a forest could help generalize better to new data. The random forest model\n",
+    "samples random point and subsets of features when training. Then, the predictions are made\n",
+    "by averaging the predictions of each decision tree."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
