Instantiate RandomForestClassifier model

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 228,
    "outputs": [],
    "source": [
     "# common imports\n",
@@ -17,6 +17,7 @@
     "\n",
     "# machine learning imports\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import cross_val_score\n",
@@ -2354,6 +2355,23 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# max features default is sqrt\n",
+    "# bootstrap default is true\n",
+    "# n estimators default in 100\n",
+    "rf_clf = RandomForestClassifier(random_state=42)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
