Fit random forest to training data

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2360,13 +2360,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "outputs": [],
    "source": [
     "# max features default is sqrt\n",
     "# bootstrap default is true\n",
     "# n estimators default in 100\n",
     "rf_clf = RandomForestClassifier(random_state=42)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "rf_clf.fit(X_train_prepared, y_train)"
    ],
    "metadata": {
     "collapsed": false,
