Test model on a few instances

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2391,13 +2391,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 230,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictions: [0 0 0 0 0 0 1 1 1 0]\n",
+      "Labels: [0, 0, 0, 0, 0, 0, 1, 1, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test on a few instances from training data\n",
+    "some_data = X_train.iloc[:10]\n",
+    "some_labels = y_train.iloc[:10]\n",
+    "some_data_prepared = full_pipeline.transform(some_data)\n",
+    "print(\"Predictions:\", knn.predict(some_data_prepared))\n",
+    "print(\"Labels:\", list(some_labels))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%"
     }
    }
   }
