Edit markdowns in section 4

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2679,16 +2679,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 100,
    "outputs": [],
    "source": [
-    "def display_evaluation(train, pred):\n",
-    "    print(\"Accuracy:\", metrics.accuracy_score(train, pred))\n",
-    "    print(\"Confusion Matrix:\\n\", metrics.confusion_matrix(train, pred))\n",
-    "    print(\"Precision:\", metrics.precision_score(train, pred))\n",
-    "    print(\"Recall:\", metrics.recall_score(train, pred))\n",
-    "    print(\"F1 Score:\", metrics.f1_score(train, pred))\n",
-    "    print(\"ROC AUC Score:\", metrics.roc_auc_score(train, pred))"
+    "def display_evaluation(actual, pred):\n",
+    "    print(\"Accuracy:\", metrics.accuracy_score(actual, pred))\n",
+    "    print(\"Confusion Matrix:\\n\", metrics.confusion_matrix(actual, pred))\n",
+    "    print(\"Precision:\", metrics.precision_score(actual, pred))\n",
+    "    print(\"Recall:\", metrics.recall_score(actual, pred))\n",
+    "    print(\"F1 Score:\", metrics.f1_score(actual, pred))\n",
+    "    print(\"ROC AUC Score:\", metrics.roc_auc_score(actual, pred))"
    ],
    "metadata": {
     "collapsed": false,
@@ -2700,7 +2700,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### KNN\n"
+    "### KNN"
    ],
    "metadata": {
     "collapsed": false
@@ -2709,7 +2709,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Model 1"
+    "#### Model 1"
    ],
    "metadata": {
     "collapsed": false,
@@ -2844,7 +2844,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Model 2"
+    "#### Model 2"
    ],
    "metadata": {
     "collapsed": false,
@@ -2950,7 +2950,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Model 3"
+    "#### Model 3"
    ],
    "metadata": {
     "collapsed": false,
@@ -3100,7 +3100,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Random Search Cross Validation 1"
+    "#### Random Search Cross Validation 1"
    ],
    "metadata": {
     "collapsed": false,
@@ -3250,7 +3250,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Model 4"
+    "#### Model 4"
    ],
    "metadata": {
     "collapsed": false,
@@ -3443,7 +3443,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Model 5"
+    "#### Model 5"
    ],
    "metadata": {
     "collapsed": false,
@@ -3539,7 +3539,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Random Search Cross Validation 2"
+    "#### Random Search Cross Validation 2"
    ],
    "metadata": {
     "collapsed": false,
@@ -3657,7 +3657,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Dummy Classifier"
+    "#### Dummy Classifier"
    ],
    "metadata": {
     "collapsed": false,
@@ -3772,7 +3772,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Evaluation on Test Set"
+    "### Evaluation on Test Set"
    ],
    "metadata": {
     "collapsed": false,
