Fix resources link

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -3753,7 +3753,7 @@
     "> #### Resources:\n",
     "> 1. Hotel Booking Demand Dataset <a href=\"https://www.kaggle.com/jessemostipak/hotel-booking-demand\"\n",
     "> title=\"Kaggle\">link</a>\n",
-    "> 2. Average Daily Rate Article <a href=\"https://www.investopedia.com/terms/a/average-daily-rate.aspp\"\n",
+    "> 2. Average Daily Rate Article <a href=\"https://www.investopedia.com/terms/a/average-daily-rate.asp\"\n",
     "> title=\"Investopedia\">link</a>\n",
     "> 3. Random Forest Article <a href=\"https://towardsdatascience.com/an-implementation-and-\n",
     "> explanation-of-the-random-forest-in-python-77bf308a9b76\" title=\"towardsdatascience\">link</a>"
