--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -3846,18 +3846,6 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "> So far the score is nearly the same after removing the columns."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
    "cell_type": "code",
    "execution_count": 177,
    "outputs": [
@@ -3997,7 +3985,18 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Evaluation on Test Set"
+    "> ### Overview:\n",
+    "> * The model with the selected features still has nearly the same score as the previous one.\n",
+    "> * The model perfoms better than the dummy classifier."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 5. Evaluate the Test Set"
    ],
    "metadata": {
     "collapsed": false,
@@ -4133,20 +4132,6 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "> ### Conclusion:\n",
-    ">\n",
-    ">"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
     }
    }
   },
