Add overview markdown sec. 4

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -2789,6 +2789,22 @@
   {
    "cell_type": "markdown",
    "source": [
+    "> ### Overview:\n",
+    ">> ####  Removing the categorical features even slightly improved the score.\n",
+    ">> * The RMSE with all features was approximately 2551.\n",
+    ">> * The RMSE with only the numerical features was approximately 2520.\n",
+    ">> * The model is substantially better than the dummy regressor."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## 5. Evaluate the Test Set"
    ],
    "metadata": {
